# golemdb

./: .gitignore  BUILD  LICENSE  README.md  WORKSPACE  deps.bzl  docker-compose.yml  go.mod  go.sum  regenPB.sh  skaffold.yaml  statminikube.sh
cmd/golemdb/: BUILD.bazel  main.go
cmd/golemdbctl/: BUILD.bazel  main.go
cmd/golemdbctl/command/: BUILD.bazel  get.go  put.go  root.go
deploy/docker/golemdb/dev/: Dockerfile
deploy/docker/golemdb/prod/: Dockerfile
deploy/k8s/: k8s-pod.yaml
pkg/api/pb/: BUILD.bazel  golem.proto  peers.proto
pkg/api/pb/peers/: BUILD.bazel  peers.pb.go  peers_grpc.pb.go
pkg/apiserver/: peerstore.go  peerstore_test.go  server.go  start.go
pkg/peerserver/: BUILD.bazel  apiserver.go  grpcwrapper.go  peerserver.go
pkg/peerserver/peerstore/: BUILD.bazel  peerstore.go  peerstore_test.go
pkg/raft/: BUILD.bazel  grpcclient.go  raft.go  state.go
pkg/server/: server.go
