load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "peers_proto",
    srcs = [
        "golem.proto",
        "peers.proto",
    ],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "peers_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "pkg/api/pb/peers",
    proto = ":peers_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "peers",
    embed = [":peers_go_proto"],
    importpath = "pkg/api/pb/peers",
    visibility = ["//visibility:public"],
)
